# ikon_shop_grizzly_mvp

./: .env copy  .gitignore  LICENSE  README.md  package-lock.json  package.json
Anchor/programs/scoreboard/: Cargo.toml
Anchor/programs/scoreboard/src/: client.ts  lib.rs
components/: ApplyToSell.js  BetaNavigation.js  Buy.js  Chart.js  DashboardHeader.js  Footer.js  Head.js  Header.js  Loading.js  LoadingWalletCheck.js  Paylink.js  SubscriptionCard.js
components/Elusiv/: dash.js  recentTxns.js  send.js  userSetUp.js
components/Game/: buyButton.js  dummyData.json  game.js  keypair.json  leaderboard.js
components/MagicWallet/: buy.js  login.js  loginForm.js  logout.js  quickActions.js  send.js
components/Merchant/: Community.js  Create.js  Dashboard.js  OrderDetails.js  Orders.js  Overview.js  PayRequests.js  PaymentHistory.js  Products.js  StoreData.js  StoreSettings.js
components/Notification/: Notification.js
components/Product/: EditProduct.js  Product.js
components/Profile/: Profile.js
components/Register/: Register.js  (+1 more)
hooks/: checkAllowance.js  checkMagicLogin.js  getBalance.js  shortenLink.js  useClipboard.js  useGreen.js  verify.js
lib/: api.js  magic.js
pages/: _app.js  _document.js  beta.js  contact.js  dashboard.js  game.js  index.js  register.js  terms.js
styles/: App.css  Beta.module.css  CreateProduct.module.css  DashboardHeader.module.css  Header.module.css  HowTo.module.css  Merchant.module.css  Paylink.module.css  Product.module.css  ProductDetails.module.css  Store.module.css  User.module.css  globals.css  index.css
(+48 files in other folders)
